--- a/pom.xml
+++ b/pom.xml
@@ -2,17 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<groupId>com.dokdae.test</groupId>
 	<artifactId>concurrent</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	
+
 	<properties>
 		<webapp.context>/</webapp.context>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		
+
 		<!-- Test -->
 		<junit.version>4.11</junit.version>
 		<hamcrest.version>1.3</hamcrest.version>
@@ -22,7 +22,7 @@
 		<!-- Logging -->
 		<logback.version>1.1.2</logback.version>
 		<slf4j.version>1.7.7</slf4j.version>
-		
+
 		<!-- Maven -->
 		<maven.test.skip>false</maven.test.skip>
 		<maven.compiler.source>1.7</maven.compiler.source>
@@ -51,6 +51,12 @@
 			<version>${mockito.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- JSR -->
+		<dependency>
+			<groupId>com.google.code.findbugs</groupId>
+			<artifactId>jsr305</artifactId>
+			<version>3.0.0</version>
+		</dependency>
 		<!-- Logging -->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
@@ -74,8 +80,8 @@
 			</dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
-	  			<artifactId>commons-lang3</artifactId>
-	  			<version>3.1</version>
+				<artifactId>commons-lang3</artifactId>
+				<version>3.1</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-codec</groupId>
@@ -94,11 +100,11 @@
 			</dependency>
 			<!-- thread-safe simpledateformat -->
 			<dependency>
-			  <groupId>com.cedarsoftware</groupId>
-			  <artifactId>java-util</artifactId>
-			  <version>1.8.0</version>
+				<groupId>com.cedarsoftware</groupId>
+				<artifactId>java-util</artifactId>
+				<version>1.8.0</version>
 			</dependency>
-			
+
 			<!-- GeoJson -->
 			<dependency>
 				<groupId>de.grundid.opendatalab</groupId>
